# test

./: Dockerfile  LICENCE  MANIFEST.in  Makefile  README.md  dev-requirements.txt  local_settings.tpl  pyproject.toml  requirements.txt  scrapinghub.yml  scrapy.cfg  setup.cfg  setup.py
data/: intra-europe-vessels.txt
doc/: Makefile  make.bat
doc/source/: advanced.rst  conf.py  deployment.rst  extensions.rst  flight.rst  glossary.rst  implementation.rst  index.rst  mail.rst  models.rst  notebooks.rst  pdf.rst  server.rst  settings.rst  setup.rst  tools.rst  workflow.rst
githooks/commit-msg/: skip-ci
githooks/post-checkout/: cleanup
githooks/post-commit/: build-ctags
githooks/pre-push/: protect-branch
kp_scrapers/: __init__.py  business.py  constants.py  vault.py
kp_scrapers/cli/: project.py  ui.py  utils.py
kp_scrapers/commands/: __init__.py  describe.py
kp_scrapers/extensions/: __init__.py  notify.py  sentry.py
kp_scrapers/lib/: captcha.py  compression.py  date.py  db_connection.py  docx.py  errors.py  excel.py  i18n.py  parser.py  pdf.py  request.py  static_data.py  unlocode.py  utils.py  xls.py
kp_scrapers/middlewares/: __init__.py  geolocation.py  http_error.py  proxy.py  user_agent.py
kp_scrapers/mixins/: distribute.py
scheduling/: agents.yml  ais.yml  canal.yml  charters.yml  contracts.yml  customs.yml  market.yml  operators.yml  port-authorities.yml  prices.yml  settings.yml  slots.yml  weather.yml
tests/: __init__.py  test_settings.py
tools/: bump_version_number.py  polipo.config  pre-commit.sh  sling_gmail2drive.gs
(+873 files in other folders)
